# px4

./: README.md  message.py
kitty/: kitty.conf  kitty.conf.bak
px4_takeoff/: package.xml  setup.cfg  setup.py
px4_takeoff/launch/: attitude_control.launch.py  mission.launch.py  takeoff.launch.py
px4_takeoff/px4_takeoff/: attitude_control_node.py  mission_node.py  takeoff_node.py
