<?xml version="1.0"?>
<package format="3">
  <name>px4_takeoff</name>
  <version>0.1.0</version>
  <description>Simple PX4 offboard takeoff node</description>

  <maintainer email="hann@ieee.org">Hann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>